--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -3,8 +3,44 @@
   <head>
     <meta charset="utf-8">
     <title>Graduation Project</title>
+    <link rel="stylesheet" href="index.css" type="text/css">
   </head>
   <body>
-    
+    <header>
+      <section id="header-block1">
+        <h1>SITENAME</h1>
+        <div id="header-block1-digg"></div>
+        <div id="header-block1-mail"></div>
+        <div id="header-block1-flickr"></div>
+        <div id="header-block1-call"></div>
+      </section>
+      <section id="header-block2">
+        <div>
+          <p>HOME</p>
+          <p>ABOUT</p>
+          <p>PORTFOLIO</p>
+          <p>BLOG</p>
+          <p>CONTACT</p>
+        </div>
+        <div>
+          <p>SEARCH</p>
+          <form class="form">
+            <label class="form-field">
+              <span>Поиск</span>
+              <input type="text" name="search-string">
+            </label>
+            <div class="form-button">
+              <button type="submit">
+                <img id="loupe" src="https://png.icons8.com/search/android/50">
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
+    </header>
+    <main></main>
+    <footer></footer>
+
+    <div id="pix"> </div>
   </body>
 </html>
