--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -9,10 +9,12 @@
     <header>
       <section id="header-block1">
         <h1>SITENAME</h1>
-        <div id="header-block1-digg"></div>
-        <div id="header-block1-mail"></div>
-        <div id="header-block1-flickr"></div>
-        <div id="header-block1-call"></div>
+        <article>
+          <div id="header-block1-digg"></div>
+          <div id="header-block1-mail"></div>
+          <div id="header-block1-flickr"></div>
+          <div id="header-block1-call"></div>
+        </article>
       </section>
       <section id="header-block2">
         <div>
