--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -10,31 +10,29 @@
       <section id="header-block1">
         <h1>SITENAME</h1>
         <article>
-          <div id="header-block1-digg"></div>
-          <div id="header-block1-mail"></div>
-          <div id="header-block1-flickr"></div>
-          <div id="header-block1-call"></div>
+          <div class="icon" id="header-block1-digg"> </div>
+          <div class="icon" id="header-block1-mail"> </div>
+          <div class="icon" id="header-block1-flickr"> </div>
+          <div class="icon" id="header-block1-call"> </div>
         </article>
       </section>
       <section id="header-block2">
-        <div>
+        <div id="menu">
           <p>HOME</p>
           <p>ABOUT</p>
           <p>PORTFOLIO</p>
           <p>BLOG</p>
           <p>CONTACT</p>
         </div>
-        <div>
+        <div id="search">
           <p>SEARCH</p>
           <form class="form">
             <label class="form-field">
               <span>Поиск</span>
-              <input type="text" name="search-string">
+              <input type="text" name="search-string /">
             </label>
             <div class="form-button">
-              <button type="submit">
-                <img id="loupe" src="https://png.icons8.com/search/android/50">
-              </button>
+              <button type="submit" id="loupe"></button>
             </div>
           </form>
         </div>
