--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -92,7 +92,11 @@
       <section class="main" id="main-block3">
         <div></div>
         <h3>WHO WE ARE</h3>
-        <div></div>
+        <div class="who"></div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur accumsan feugiat...
+          <a href=#>Read More!</a>
+        </p>
         <h3>SPONSORS</h3>
         <div class="sponsors" id="sponsor1"></div>
         <div class="sponsors" id="sponsor1"></div>
