--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -23,7 +23,7 @@
           <p>ABOUT</p>
           <p>PORTFOLIO</p>
           <p>BLOG</p>
-          <p>CONTACT</p>
+          <p id="last-menu-item">CONTACT</p>
         </div>
         <div id="search">
           <p>SEARCH</p>
