--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -24,7 +24,6 @@
           <p>PORTFOLIO</p>
           <p>BLOG</p>
           <p id="last-menu-item">CONTACT</p>
-
           <div id="search">
             <p>SEARCH</p>
             <form class="form">
@@ -37,72 +36,78 @@
               </div>
             </form>
           </div>
-
         </div>
-
       </section>
     </header>
 
     <main>
       <section class="main" id="main-block1">
         <div id="main-block1-div1">
-          <h2>WELCOME TO OUR SITE</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            feugiat, nulla vitae accumsan feugiat, odio nisi tristique odio,
-            sit amet dictum quam augue vel urna. Proin eleifend, erat eu
-            rhoncus suscipit, nisl velit pharetra leo
-          </p>
-          <p class="main-block1-button">LEARN MORE</p>
-          <p class="main-block1-button" id="button2">OUR WORK</p>
-          <img id="eye" src="pics/eye.jpg" alt="abstract drawing">
-          <img id="abstract" src="pics/abstract.jpg" alt="abstract drawing">
+          <article>
+            <div id="main-block1-div1-divA">
+              <h2>WELCOME TO OUR SITE</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                feugiat, nulla vitae accumsan feugiat, odio nisi tristique odio,
+                sit amet dictum quam augue vel urna. Proin eleifend, erat eu
+                rhoncus suscipit, nisl velit pharetra leo
+              </p>
+            </div>
+            <div id="main-block1-div1-divB">
+              <p class="main-block1-button">LEARN MORE</p>
+              <p class="main-block1-button" id="button2">OUR WORK</p>
+            </div>
+          </article>
         </div>
         <div id="main-block1-div2">
           <p>
             You're here: Home > Welcome..
           </p>
         </div>
+        <img id="eye" src="pics/eye.jpg" alt="abstract drawing">
+        <img id="abstract" src="pics/abstract.jpg" alt="abstract drawing">
       </section>
       <section class="main" id="main-block2">
-        <h2>FROM THE BLOG</h2>
-        <article>
-          <h3>Blog Post Name Here</h3>
-          <h4>October 15th 2010 | 7 comments</h4>
-          <div id="main-block2-div1"></div>
+        <div id="main-block2-div1">
+          <h2>FROM THE BLOG</h2>
+          <article class="blog">
+            <h3>Blog Post Name Here</h3>
+            <h4>October 15th 2010 | 7 comments</h4>
+            <div class="blog-img" id="main-block2-div1-divA"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+              feugiat, nulla vitae accumsan feugiat, odio nisi tristique odio,
+              sit amet dictum quam augue vel urna. Proin eleifend, erat eu
+              rhoncus suscipit, nisl velit pharetra leo
+              <a href=#>Continue Reading...</a>
+            </p>
+          </article>
+          <article class="blog">
+            <h3>Blog Post Name Here</h3>
+            <h4>October 15th 2010 | 7 comments</h4>
+            <div class="blog-img" id="main-block2-div1-divB"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+              feugiat, nulla vitae accumsan feugiat, odio nisi tristique odio,
+              sit amet dictum quam augue vel urna. Proin eleifend, erat eu
+              rhoncus suscipit, nisl velit pharetra leo
+              <a href=#>Continue Reading...</a>
+            </p>
+          </article>
+          <div>THE BLOG</div>
+        </div>
+        <div id="main-block2-div2">
+          <div></div>
+          <h3>WHO WE ARE</h3>
+          <div class="who"></div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            feugiat, nulla vitae accumsan feugiat, odio nisi tristique odio,
-            sit amet dictum quam augue vel urna. Proin eleifend, erat eu
-            rhoncus suscipit, nisl velit pharetra leo
-            <a href=#>Continue Reading...</a>
+            Lorem ipsum dolor sit amet, consectetur accumsan feugiat...
+            <a href=#>Read More!</a>
           </p>
-        </article>
-        <article>
-          <h3>Blog Post Name Here</h3>
-          <h4>October 15th 2010 | 7 comments</h4>
-          <div id="main-block2-div2"></div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            feugiat, nulla vitae accumsan feugiat, odio nisi tristique odio,
-            sit amet dictum quam augue vel urna. Proin eleifend, erat eu
-            rhoncus suscipit, nisl velit pharetra leo
-            <a href=#>Continue Reading...</a>
-          </p>
-        </article>
-        <div>THE BLOG</div>
-      </section>
-      <section class="main" id="main-block3">
-        <div></div>
-        <h3>WHO WE ARE</h3>
-        <div class="who"></div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur accumsan feugiat...
-          <a href=#>Read More!</a>
-        </p>
-        <h3>SPONSORS</h3>
-        <div class="sponsors" id="sponsor1"></div>
-        <div class="sponsors" id="sponsor1"></div>
+          <h3>SPONSORS</h3>
+          <div class="sponsors" id="sponsor1"></div>
+          <div class="sponsors" id="sponsor2"></div>
+        </div>
       </section>
     </main>
 
