--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -72,7 +72,7 @@
           <h2>FROM THE BLOG</h2>
           <article class="blog">
             <h3>Blog Post Name Here</h3>
-            <h4>October 15th 2010 | 7 comments</h4>
+            <h4>October 15th 2010 <span>|</span> 7 comments</h4>
             <div class="blog-img" id="main-block2-div1-divA"></div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
@@ -84,7 +84,7 @@
           </article>
           <article class="blog">
             <h3>Blog Post Name Here</h3>
-            <h4>October 15th 2010 | 7 comments</h4>
+            <h4>October 15th 2010 <span>|</span> 7 comments</h4>
             <div class="blog-img" id="main-block2-div1-divB"></div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
