--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -100,28 +100,40 @@
           <article>
             <div class="tabs">
               <input id="tab1" type="radio" name="tabs" checked>
-              <label for="tab1" title="Вкладка 1">Вкладка 1</label>
+              <label for="tab1" title="Comments">Comments</label>
 
               <input id="tab2" type="radio" name="tabs">
-              <label for="tab2" title="Вкладка 2">Вкладка 2</label>
+              <label for="tab2" title="Categories">Categories</label>
 
               <input id="tab3" type="radio" name="tabs">
-              <label for="tab3" title="Вкладка 3">Вкладка 3</label>
+              <label for="tab3" title="Archives">Archives</label>
 
               <section id="content-tab1">
                   <p>
-          		      Здесь размещаете любое содержание....
+          		      Lorem ipsum dolor sit amet, consectetur accumsan feugiat!
+                  </p>
+                  <hr>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur accumsan feugiat!
                   </p>
               </section>
               <section id="content-tab2">
                   <p>
-                    Здесь размещаете любое содержание....
+                    Lorem ipsur accumsan feugiat!
+                  </p>
+                  <hr>
+                  <p>
+                    Lorem ipsum doloetur accumsan feugiat!
                   </p>
               </section>
               <section id="content-tab3">
                   <p>
-                    Здесь размещаете любое содержание....
-          		</p>
+                    Lorem i, consectetur accumsan feugiat!
+                  </p>
+                  <hr>
+                  <p>
+                    Lorem ipsum , coan feugiat!
+          		    </p>
               </section>
             </div>
           </article>
