--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -97,7 +97,7 @@
           <div>THE BLOG</div>
         </div>
         <div id="main-block2-div2">
-          <article>
+          <article id="main-block2-div2-article1">
             <div class="tabs">
               <input id="tab1" type="radio" name="tabs" checked>
               <label for="tab1" title="Comments">Comments</label>
@@ -137,7 +137,7 @@
               </section>
             </div>
           </article>
-          <article>
+          <article id="main-block2-div2-article2">
             <h3>WHO WE ARE</h3>
             <div id="who"></div>
             <p>
@@ -145,7 +145,7 @@
               <a href=#>Read More!</a>
             </p>
           </article>
-          <article>
+          <article id="main-block2-div2-article3">
             <h3>SPONSORS</h3>
             <div class="sponsors" id="sponsor1"></div>
             <div class="sponsors" id="sponsor2"></div>
