--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -137,16 +137,16 @@
               </section>
             </div>
           </article>
-          <article id="main-block2-div2-article2">
-            <h3>WHO WE ARE</h3>
+          <article class="main-block2-article" id="main-block2-div2-article2">
+            <h3 class="h3">WHO WE ARE</h3>
             <div id="who"></div>
             <p>
               Lorem ipsum dolor sit amet, consectetur accumsan feugiat...
               <a href=#>Read More!</a>
             </p>
           </article>
-          <article id="main-block2-div2-article3">
-            <h3>SPONSORS</h3>
+          <article class="main-block2-article" id="main-block2-div2-article3">
+            <h3 class="h3">SPONSORS</h3>
             <div class="sponsors" id="sponsor1"></div>
             <div class="sponsors" id="sponsor2"></div>
           </article>
@@ -155,7 +155,58 @@
     </main>
 
     <footer>
-
+      <section class="footer" id="footer-block1">
+        <article class="footer-div" id="footer-block1-div1">
+          <h3 class="h3">GET A FREE QUOTE</h3>
+          <form class="footer-form">
+            <input type="text" id="name" name="name"
+                      placeholder="Your Name">
+            <input type="text" id="surname" name="surname"
+                      placeholder="Last Name">
+            <textarea rows="7" cols="36" id="comment" name="comment"
+                      placeholder="Bla Bla Bla.."></textarea>
+            <input type="email" id="email" name="email"
+                      placeholder="Your E-mail address">
+          </form>
+          <div class="footer-button">SUBMIT</div>
+        </article>
+        <article class="footer-div" id="footer-block1-div2">
+          <h3 class="h3">OUR RECENT PROJECTS</h3>
+          <div class="footer-projects" id="sky"></div>
+          <div class="footer-projects" id="choco"></div>
+          <div class="footer-projects" id="pink"></div>
+          <div class="footer-projects" id="arm"></div>
+          <div class="footer-button">PORTFOLIO</div>
+        </article>
+        <article class="footer-div" id="footer-block1-div3">
+          <h3 class="h3">TWITTER STREAM</h3>
+          <p class="footer-twitter">
+            Lorem ipsum dolor sit amet, consectetur accumsan feugiat!
+            <a href=#>4 Minutes Ago..</a>
+          </p>
+          <p class="footer-twitter">
+            Lorem ipsum dolor sit amet, consectetur accumsan feugiat!
+            <a href=#>4 Minutes Ago..</a>
+          </p>
+          <p class="footer-twitter">
+            Lorem ipsum dolor sit amet, consectetur accumsan feugiat!
+            <a href=#>4 Minutes Ago..</a>
+          </p>
+          <div class="footer-button">FOLLOW US</div>
+        </article>
+      </section>
+      <section class="footer" id="footer-block2">
+        <p>
+          All Copyrights Reserved | 2010 | WebsiteName
+        </p>
+        <p>
+          <a href=#>Home</a> |
+          <a href=#>About</a> |
+          <a href=#>Portfolio</a> |
+          <a href=#>Blog</a> |
+          <a href=#>Contact</a>
+        </p>
+      </section>
     </footer>
 
 
