--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -168,7 +168,7 @@
             <input type="email" id="email" name="email"
                       placeholder="Your E-mail address">
           </form>
-          <div class="footer-button">SUBMIT</div>
+          <div class="footer-button" id="submit">SUBMIT</div>
         </article>
         <article class="footer-div" id="footer-block1-div2">
           <h3 class="h3">OUR RECENT PROJECTS</h3>
@@ -176,7 +176,7 @@
           <div class="footer-projects" id="choco"></div>
           <div class="footer-projects" id="pink"></div>
           <div class="footer-projects" id="arm"></div>
-          <div class="footer-button">PORTFOLIO</div>
+          <div class="footer-button" id="portfolio">PORTFOLIO</div>
         </article>
         <article class="footer-div" id="footer-block1-div3">
           <h3 class="h3">TWITTER STREAM</h3>
@@ -199,7 +199,7 @@
         <p>
           All Copyrights Reserved | 2010 | WebsiteName
         </p>
-        <p>
+        <p id="footer-links">
           <a href=#>Home</a> |
           <a href=#>About</a> |
           <a href=#>Portfolio</a> |
