--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -100,13 +100,13 @@
           <article id="main-block2-div2-article1">
             <div class="tabs">
               <input id="tab1" type="radio" name="tabs" checked>
-              <label for="tab1" title="Comments">Comments</label>
+              <label id="tab1-label" for="tab1" title="Comments">Comments</label>
 
               <input id="tab2" type="radio" name="tabs">
               <label for="tab2" title="Categories">Categories</label>
 
               <input id="tab3" type="radio" name="tabs">
-              <label for="tab3" title="Archives">Archives</label>
+              <label id="tab3-label" for="tab3" title="Archives">Archives</label>
 
               <section id="content-tab1">
                   <p>
