--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -19,7 +19,7 @@
       </section>
       <section id="header-block2">
         <div id="menu">
-          <p>HOME</p>
+          <p class="menu-active">HOME</p>
           <p>ABOUT</p>
           <p>PORTFOLIO</p>
           <p>BLOG</p>
