--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -11,19 +11,19 @@
       <section id="header-block1">
         <h1>SITENAME</h1>
         <article>
-          <div class="icon" id="header-block1-digg"></div>
-          <div class="icon" id="header-block1-mail"></div>
-          <div class="icon" id="header-block1-flickr"></div>
-          <div class="icon" id="header-block1-call"></div>
+          <a href=#><div class="icon" id="header-block1-digg"></div></a>
+          <a href=#><div class="icon" id="header-block1-mail"></div></a>
+          <a href=#><div class="icon" id="header-block1-flickr"></div></a>
+          <a href=#><div class="icon" id="header-block1-call"></div></a>
         </article>
       </section>
       <section id="header-block2">
         <div id="menu">
-          <p class="menu-active">HOME</p>
-          <p>ABOUT</p>
-          <p>PORTFOLIO</p>
-          <p>BLOG</p>
-          <p id="last-menu-item">CONTACT</p>
+          <p class="menu-active"><a href=#>HOME</a></p>
+          <p><a href=#>ABOUT</a></p>
+          <p><a href=#>PORTFOLIO</a></p>
+          <p><a href=#>BLOG</a></p>
+          <p id="last-menu-item"><a href=#>CONTACT</a></p>
           <div id="search">
             <p>SEARCH</p>
             <form class="form">
