--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -9,7 +9,7 @@
 
     <header>
       <section id="header-block1">
-        <h1>SITENAME</h1>
+        <h1>Sitename</h1>
         <article>
           <a href=#><div class="icon" id="header-block1-digg"></div></a>
           <a href=#><div class="icon" id="header-block1-mail"></div></a>
@@ -19,23 +19,24 @@
       </section>
       <section id="header-block2">
         <div id="menu">
-          <p class="menu-active"><a href=#>HOME</a></p>
-          <p><a href=#>ABOUT</a></p>
-          <p><a href=#>PORTFOLIO</a></p>
-          <p><a href=#>BLOG</a></p>
-          <p id="last-menu-item"><a href=#>CONTACT</a></p>
-          <div id="search">
-            <p>SEARCH</p>
-            <form class="form">
-              <label class="form-field">
-                <span>Поиск</span>
-                <input type="text" name="search-string /">
-              </label>
-              <div class="form-button">
-                <button type="submit" id="loupe"></button>
-              </div>
-            </form>
-          </div>
+          <a class="menu-active" href=#>Home</a>
+          <a href=#>About</a>
+          <a href=#>Portfolio</a>
+          <a href=#>Blog</a>
+          <a  id="last-menu-item" href=#>Contact</a>
+
+        </div>
+        <div id="search">
+          <p>Search</p>
+          <form class="form">
+            <label class="form-field">
+              <span>Поиск</span>
+              <input type="text" name="search-string /">
+            </label>
+            <div class="form-button">
+              <button type="submit" id="loupe"></button>
+            </div>
+          </form>
         </div>
       </section>
     </header>
@@ -45,7 +46,7 @@
         <div id="main-block1-div1">
           <article>
             <div id="main-block1-div1-divA">
-              <h2>WELCOME TO OUR SITE</h2>
+              <h2>Welcome to our site</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                 feugiat, nulla vitae accumsan feugiat, odio nisi tristique odio,
@@ -54,8 +55,8 @@
               </p>
             </div>
             <div id="main-block1-div1-divB">
-              <p class="main-block1-button">LEARN MORE</p>
-              <p class="main-block1-button" id="button2">OUR WORK</p>
+              <a href=# class="main-block1-button">Learn more</a>
+              <a href=# class="main-block1-button" id="button2">Our work</a>
             </div>
           </article>
         </div>
@@ -69,7 +70,7 @@
       </section>
       <section class="main" id="main-block2">
         <div id="main-block2-div1">
-          <h2>FROM THE BLOG</h2>
+          <h2>From the blog</h2>
           <article class="blog">
             <h3>Blog Post Name Here</h3>
             <h4>October 15th 2010 <span>|</span> 7 comments</h4>
@@ -94,7 +95,7 @@
               <a href=#>Continue Reading...</a>
             </p>
           </article>
-          <div>THE BLOG</div>
+          <a href=#>The blog</a>
         </div>
         <div id="main-block2-div2">
           <article id="main-block2-div2-article1">
@@ -132,13 +133,13 @@
                   </p>
                   <hr>
                   <p>
-                    Lorem ipsum , coan feugiat!
+                    Lorem ipsum, coan feugiat!
           		    </p>
               </section>
             </div>
           </article>
           <article class="main-block2-article" id="main-block2-div2-article2">
-            <h3 class="h3">WHO WE ARE</h3>
+            <h3 class="h3">Who we are</h3>
             <div id="who"></div>
             <p>
               Lorem ipsum dolor sit amet, consectetur accumsan feugiat...
@@ -146,9 +147,9 @@
             </p>
           </article>
           <article class="main-block2-article" id="main-block2-div2-article3">
-            <h3 class="h3">SPONSORS</h3>
-            <div class="sponsors" id="sponsor1"></div>
-            <div class="sponsors" id="sponsor2"></div>
+            <h3 class="h3">Sponsors</h3>
+            <a href=# class="sponsors" id="sponsor1"></a>
+            <a href=# class="sponsors" id="sponsor2"></a>
           </article>
         </div>
       </section>
@@ -157,7 +158,7 @@
     <footer>
       <section class="footer" id="footer-block1">
         <article class="footer-div" id="footer-block1-div1">
-          <h3 class="h3">GET A FREE QUOTE</h3>
+          <h3 class="h3">Get a free quote</h3>
           <form class="footer-form">
             <input type="text" id="name" name="name"
                       placeholder="Your Name">
@@ -167,19 +168,19 @@
                       placeholder="Bla Bla Bla.."></textarea>
             <input type="email" id="email" name="email"
                       placeholder="Your E-mail address">
+            <input type="button" class="footer-button" id="submit" value="Submit">
           </form>
-          <div class="footer-button" id="submit">SUBMIT</div>
         </article>
         <article class="footer-div" id="footer-block1-div2">
-          <h3 class="h3">OUR RECENT PROJECTS</h3>
+          <h3 class="h3">Our recent projects</h3>
           <div class="footer-projects" id="sky"></div>
           <div class="footer-projects" id="choco"></div>
           <div class="footer-projects" id="pink"></div>
           <div class="footer-projects" id="arm"></div>
-          <div class="footer-button" id="portfolio">PORTFOLIO</div>
+          <a href=# class="footer-button" id="portfolio">Portfolio</a>
         </article>
         <article class="footer-div" id="footer-block1-div3">
-          <h3 class="h3">TWITTER STREAM</h3>
+          <h3 class="h3">Twitter stream</h3>
           <p class="footer-twitter">
             Lorem ipsum dolor sit amet, consectetur accumsan feugiat!
             <a href=#>4 Minutes Ago..</a>
@@ -192,7 +193,7 @@
             Lorem ipsum dolor sit amet, consectetur accumsan feugiat!
             <a href=#>4 Minutes Ago..</a>
           </p>
-          <div class="footer-button">FOLLOW US</div>
+          <a href=# class="footer-button">Follow Us</a>
         </article>
       </section>
       <section class="footer" id="footer-block2">
