--- a/1. HTML-верстка/_D_/index.html
+++ b/1. HTML-верстка/_D_/index.html
@@ -24,7 +24,6 @@
           <a href=#>Portfolio</a>
           <a href=#>Blog</a>
           <a  id="last-menu-item" href=#>Contact</a>
-
         </div>
         <div id="search">
           <p>Search</p>
@@ -197,14 +196,16 @@
         </article>
       </section>
       <section class="footer" id="footer-block2">
-        <p>
-          All Copyrights Reserved | 2010 | WebsiteName
-        </p>
+        <div>
+          <p>All Copyrights Reserved</p>
+          <p>2010</p>
+          <p>WebsiteName</p>
+        </div>
         <p id="footer-links">
-          <a href=#>Home</a> |
-          <a href=#>About</a> |
-          <a href=#>Portfolio</a> |
-          <a href=#>Blog</a> |
+          <a href=#>Home</a>
+          <a href=#>About</a>
+          <a href=#>Portfolio</a>
+          <a href=#>Blog</a>
           <a href=#>Contact</a>
         </p>
       </section>
